# geography-data-mapper

./: .gitignore  .tool-versions  Dockerfile  README.md  taskfile.yaml
app/: Cargo.toml  build.rs  diesel.toml  taskfile.yaml
app/migrations/2023-04-03-135402_create_datasources/: up.sql
app/priv/migrations/: V1__datasets.sql  V2__geofeatures.sql
app/priv/migrations/2023-04-03-135402_create_datasources/: down.sql
app/src/: config.rs  db.rs  main.rs  models.rs  schema.rs
app/src/api/: datasources.rs  hello.rs  mod.rs
app/src/generator/: geogen.rs  mod.rs
app/src/importer/: geojson.rs  geonames.rs  mod.rs
app/src/server/: mod.rs
app/src/server/api/: datapoints.rs  datasets.rs  datasources.rs  hello.rs  mod.rs
app/src/server/dto/: mod.rs
docs/product/: version-1-to-get-started.md
frontend/: .gitignore  .prettierrc.yaml  next.config.js  package-lock.json  package.json  taskfile.yaml
frontend/components/: Containers.jsx  Map.jsx  MapWithNoSSR.js  Todo.jsx
frontend/components/common/: SelectDatasource.jsx
frontend/lib/: api.js  coloring.js  icon.js
frontend/models/: datapoints.js  datasources.js  fake.js
frontend/pages/: _app.js  containers.module.scss  golbal.css  index.js
infra/: docker-compose.yaml  taskfile.yaml
