[package]
name = "geography-data-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

[[bin]]
name = "geography-data-mapper"
path = "src/main.rs"
