[package]
name = "geography-data-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.159"
serde_json = "1.0.95"

#Not used directrly, but required to compile prover version of sqlite3
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8.5"

[[bin]]
name = "geography-data-mapper"
path = "src/main.rs"
