[package]
name = "geography-data-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
dotenv = "0.15.0"
geo = "0.24.1"
geo-types = { version = "0.7.9", features = ["serde"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
r2d2 = "0.8.10"
rand = "0.8.5"
refinery = { version = "0.8.7", features = ["rusqlite"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] } # refinery 0.8.7 requires 0.28.0
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["raw_value"] }

[[bin]]
name = "geography-data-mapper"
path = "src/main.rs"
